core/src/ir/module/snapshots/vicis_core__ir__module__parser__parse_example_phi.snap
---
source: src/ir/module/parser.rs
expression: module

---
source_filename = "c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-pc-linux-gnu"


define external dso_local default i32 @main(i32 %0) #0 {
1:
    %2 = icmp eq i32 %0, 0
    br i1 %2, label %3, label %4
3:
    br label %5
4:
    br label %5
5:
    %.0 = phi i32 [1, %3], [2, %4]
    ret i32 %.0
}

attributes #0 = { noinline nounwind uwtable }
!llvm.ident = !{!1}
!0 = !{i32 1, !"wchar_size", i32 4}
!llvm.module.flags = !{!0}
!1 = !{!"clang version 10.0.0-4ubuntu1 "}

